--- a/src/index.css
+++ b/src/index.css
@@ -2,13 +2,18 @@
 
 
 /* add here any tailwind custom class you want */
-@theme{
-    --font-poppins: Poppins, Tahoma, Verdana, sans-serif ;
+@theme {
+    --font-poppins: Poppins, Tahoma, Verdana, sans-serif;
     --color-primary: #7e57c2;
     --color-secondary: #6a4aaa;
+    --color-primary-dark: #212121;
+    --color-secondary-dark: #303030;
+    --color-tertiary-dark:#171717;
+    --color-primary-light: #f5f5f0;
 }
+@custom-variant dark (&:where(.dark, .dark *));
 
-body{
+body {
     font-family: var(--font-poppins);
 }
 
@@ -31,6 +36,10 @@ body{
     max-height: 90vh !important;
     overflow: auto !important;
     border: none !important;
+
+    .dark & {
+        background-color: var(--color-primary-dark) !important;
+    }
 }
 
 /* Add responsive margins for small screens */
@@ -40,3 +49,12 @@ body{
         margin: 0 !important;
     }
 }
+
+/* @media (prefers-color-scheme: dark) {
+    body {
+        background-color: var(--color-primary-dark);
+    }
+    .ReactModal__Content {
+        background-color: var(--color-primary-dark) !important;
+    }
+} */
